# stopwatch

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: rust.yml  security-audit.yml
src/: main.rs
