[package]
name = "zarthus_stopwatch"
description = "A minimal stopwatch application with hints for taking breaks"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
repository = "stopwatch"
readme = "README.md"
publish = true
exclude = ["resource/*"]

[dependencies]
dirs = { version = "5.0" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
#iced = { version = "0.13", features = ["smol"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
# branch = "master"
rev = "555ee3e9"
features = ["smol", "image"]

[features]
default = ["store_sessions"]
store_sessions = []
