[package]
name = "zarthus_stopwatch"
description = "Generic UI stopwatch - follows 20-20-20 rule to remind you to take breaks while working on your computer."
version = "0.2.0"
edition = "2024"
license = "MIT or Apache-2.0"
repository = "stopwatch"
readme = "README.md"
publish = true
exclude = ["resource/*"]

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "15c0e39" # 0.14-dev
features = ["smol", "image", "x11"]

